# py-beginner-projects

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/app/: main.py
src/projects/dice_rolling/: main.py
tests/: test_main.py
